--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,9 +1,6 @@
 <h1>Editing game</h1>
-
 <%= render "form", game: @game %>
-
-<br>
-
+<p>A chaque mise à jours, les cartes son générées aléatoirement.</p>
 <div>
   <%= link_to "Show this game", @game %> |
   <%= link_to "Back to games", games_path %>
