generate qr code

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+@media print
+{
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
