--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Générateur du jeu Killer</h1>
+<h2>Comment ça marche?</h2>
+<ol>
+  <li><%= link_to 'Créez un évenement', new_game_path %></li>
+  <li>Ajoutez les participants et les actions</li>
+  <li>Générez et imprimmez les cartes</li>
+</ol>
