--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -3,15 +3,20 @@
 <div class="cards">
   <% @cards.each do |card| %>
     <div class="card">
-      <p class="card__title">Killer card</p>
-      <p class="card__action"><strong><%= card.player %></strong>, tu dois faire en sorte que <strong><%= card.target %></strong> effectue l'action suivante:
-      </p>
-      <blockquote><%= card.action %></blockquote>
-      <p class="card__help">Fais faire cette acion à ta victime et remporte sa/ses cartes et remplis tes nouveaux objectifs</p>
-      <p>Au dos de la carte, se trouve un QR code à scanner si tu te fais prendre cette carte.</p>
-      <hr/>
-      <p>Bien joué <strong><%= card.target %></strong>, t'as bien niqué <strong><%=  card.player %></strong>! Scan ce QR code et passe à la suite.</p>
-      <%= card_qr_code card %>
+      <div class="card__front">
+        <p class="card__title">Killer card de <strong><%= card.player %></strong></p>
+        <p class="card__action">Fais en sorte que <strong><%= card.target %></strong> effectue l'action suivante:<br/>
+          <strong><%= card.action %></strong>
+        </p>
+        <p class="card__help">Fais faire cette acion à ta victime et remporte sa/ses cartes et remplis tes nouveaux objectifs</p>
+        <p class="card__help">Au dos de la carte, se trouve un QR code à scanner si tu te fais prendre cette carte.</p>
+      </div>
+      <div class="card__back">
+        <p>Bien joué <strong><%= card.target %></strong>, t'as bien niquer <strong><%=  card.player %></strong>! Scan ce QR code et passe à la suite.</p>
+        <div class="text-center">
+          <%= card_qr_code card %>
+        </div>
+      </div>
     </div>
   <% end %>
 </div>
