add public dashboard

--- a/app/views/cards/_events.html.erb
+++ b/app/views/cards/_events.html.erb
@@ -1,5 +1,9 @@
-<ul class="events">
-  <% cards.each do |card| %>
-    <li><%= format_time card.done_at %>: Un joueur <%= kill_word %>. On l'a fait <strong><%= card.action %></strong>.</li>
-  <% end %>
-</ul>
+<% if cards.size != 0 %>
+  <ul class="events">
+    <% cards.each do |card| %>
+      <li>💀 <%= format_time card.done_at %>: Un joueur <%= kill_word %>. On l'a fait <strong><%= card.action %></strong>.</li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>Tout est calme... pour le moment. 😏</p>
+<% end %>
