--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -1,13 +1,19 @@
-<p>Actuellement , il ne reste que <%= game.cards.reject(&:done_at).size %> joueurs sur les <%= game.cards.size %>.</p>
-<progress value="<%= game.cards.filter(&:done_at).size %>" max="<%= game.cards.size %>"></progress>
+<% remaining_player = game.cards.reject(&:done_at).size %>
+<% if remaining_player == game.cards.size %>
+  <p>Les <%= remaining_player %> joueurs sont en vie. Dépèche toi de remplir ta mission.</p>
+<% elsif remaining_player == 0 %>
+  <p>Le jeu est terminé. 😭</p>
+<% else %>
+  <p>Actuellement , il ne reste que <%= remaining_player %> joueurs sur les <%= game.cards.size %>. 😱</p>
+  <progress value="<%= game.cards.filter(&:done_at).size %>" max="<%= game.cards.size %>"></progress>
+<% end %>
 <div class="grid">
-  <%# <article>
-    <header>Nombre de cartes</header>
-
-
-  </article> %>
   <article>
-    <header>Derniers événements</header>
+    <header>⏳ Derniers événements</header>
     <%= render "cards/events", cards: @cards_done %>
+  </article>
+  <article>
+    <header>🏆 Palmarès</header>
+    <p>TODO</p>
   </article>
 </div>
