--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KillerGame</title>
+    <title>🔫 KillerGame</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,7 +13,7 @@
     <main class="container">
       <nav>
         <ul>
-          <li><strong><%= link_to 'Le jeu du Killer', root_path %></strong></li>
+          <li><strong><%= link_to '🔫 Killer Game', root_path %></strong></li>
         </ul>
         <% if user_signed_in? %>
           <ul>
