--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -1,3 +1,9 @@
 <h1>Tableau de bord</h1>
 <%= render 'games/dashboard', game: @game %>
 <%= link_to 'Gérer la partie [admin]', game_path(@game.id), role: :button if is_admin? @game %>
+<h2>FAQ</h2>
+<details>
+  <summary>🤔 Je ne connais pas la personne</summary>
+  <p>Demmerdes toi, c'est le jeu! 👹</p>
+  <p>Si tu n'y arrive toujours pas, demande à l'organisateur. Mais fais attention, tu risques de laisser des indices sur ton objectif.</p>
+</details>
