--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,37 +1,7 @@
-<%= form_with(model: card) do |form| %>
-  <% if card.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(card.errors.count, "error") %> prohibited this card from being saved:</h2>
-
-      <ul>
-        <% card.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+<%= form_with(model: card, url: game_card_path(game_id: card.game.id, id: card.token), remote: true, class: "card-form") do |form| %>
+  <%= form.label :done_at do %>
+    <%= form.check_box :done_at, onchange: "javascript:this.form.commit.click();", checked: !card.done_at.nil? %>
+    <span class="hidden">Réalisé ?</span>
   <% end %>
-
-  <div>
-    <%= form.label :game_id, style: "display: block" %>
-    <%= form.text_field :game_id %>
-  </div>
-
-  <div>
-    <%= form.label :player, style: "display: block" %>
-    <%= form.text_field :player %>
-  </div>
-
-  <div>
-    <%= form.label :target, style: "display: block" %>
-    <%= form.text_field :target %>
-  </div>
-
-  <div>
-    <%= form.label :action, style: "display: block" %>
-    <%= form.text_field :action %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.submit nil, class: 'hidden' %>
 <% end %>
