--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -3,4 +3,6 @@
 <h2>Où en est le jeu?</h2>
 <%= render 'games/dashboard', game: @card.game %>
 <%= link_to "Raffraichir cette page", game_card_path(game_id: @card.game_id, id: @card.token ) %>
-<%= link_to 'Gérer la partie [admin]', game_path(@card.game.id), role: :button if is_admin? @card.game %>
+<%= link_to game_path(@card.game.id), role: :button  do %>
+  Gérer la partie <mark>admin</mark>
+<% end if is_admin? @card.game %>
