--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,28 @@
 <h1><%= @game.name %></h1>
 <details open>
+  <summary>Cartes</summary>
+  <table>
+    <tr>
+      <th></th>
+      <th>Joueur</th>
+      <th>Action</th>
+      <th>Cible</th>
+      <th>Actions</th>
+    </tr>
+    <tr>
+      <% @game.cards.each do |card| %>
+        <td><%= render "cards/form", card: card %></td>
+        <td><%= card.player %></td>
+        <td><%= card.action %></td>
+        <td><%= card.target %></td>
+        <td>
+          <%= link_to 'Lien du killer', game_card_path(game_id: card.game_id, id: card.token) %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+</details>
+<details>
   <summary>Joueurs</summary>
   <div class="grid">
     <div>
@@ -35,32 +58,11 @@
   </details>
 <% end %>
 <details>
-  <summary>Cartes</summary>
-  <table>
-    <tr>
-      <th></th>
-      <th>Joueur</th>
-      <th>Action</th>
-      <th>Cible</th>
-      <th>Token</th>
-    </tr>
-    <tr>
-      <% @game.cards.each do |card| %>
-        <td><input type="checkbox" <%= 'checked' if !card.done_at.nil? %> data-tooltip="<%= card.done_at %>" readonly disabled /></td>
-        <td><%= card.player %></td>
-        <td><%= card.action %></td>
-        <td><%= card.target %></td>
-        <td><%= link_to 'carte', game_card_path(game_id: card.game_id, id: card.token) %></td>
-      </tr>
-    <% end %>
-  </table>
-</details>
-<details>
   <summary>Actions</summary>
   <div class="buttons">
-    <%= link_to 'Générer les cartes', game_cards_path(@game.id), role: :button %>
-    <%= link_to "Edit this game", edit_game_path(@game), role: :button %>
-    <%= button_to "Destroy this game", @game, method: :delete, role: :button %>
+    <%= link_to '🃏 Générer les cartes', game_cards_path(@game.id), role: :button %>
+    <%= link_to "✏ Edit this game", edit_game_path(@game), role: :button %>
+    <%= button_to "🗑 Supprimer l'évenement", @game, method: :delete, role: :button %>
+    <%= link_to "📊 Dashboard", game_dashboard_path(@game.token), role: :button %>
   </div>
 </details>
-<%= link_to "Dashboard", game_dashboard_path(@game.token), role: :button %>
