--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -61,8 +61,14 @@
   <summary>Actions</summary>
   <div class="buttons">
     <%= link_to '🃏 Générer les cartes', game_cards_path(@game.id), role: :button %>
-    <%= link_to "✏ Edit this game", edit_game_path(@game), role: :button %>
-    <%= button_to "🗑 Supprimer l'évenement", @game, method: :delete, role: :button %>
-    <%= link_to "📊 Dashboard", game_dashboard_path(@game.token), role: :button %>
+    <%= link_to "📊 Dashboard", game_dashboard_path(@game.token), role: :button if @game.token %>
+    <%= link_to "✏ Edit this game", edit_game_path(@game), role: :button, class: "secondary" unless @game.started? %>
+  </div>
+</details>
+<details>
+  <summary>⚠ Actions dangeureuses</summary>
+  <div class="buttons">
+    <%= link_to "✏ Edit this game", edit_game_path(@game), role: :button, class: "secondary" if @game.started? %>
+    <%= button_to "🗑 Supprimer l'évenement", @game, method: :delete, role: :button, class: "secondary outline" %>
   </div>
 </details>
