improve card print

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,16 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require_tree ./application
  *= require_self
  */
-
-@media print {
-  .no-print,
-  .no-print * {
-    display: none !important;
-  }
-}
 
 main.container {
   padding-top: 0.2rem;
