--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -34,11 +34,25 @@
 </div>
 <h2>FAQ</h2>
 <details>
-  <summary>🤔 Je ne connais pas la personne</summary>
+  <summary>🤔 C'est quoi les règles?</summary>
+  <%= render 'games/rules' %>
+</details>
+<details>
+  <summary>😪 Je ne connais pas la personne</summary>
   <p>Demmerdes toi, c'est le jeu! 👹</p>
   <p>Si tu n'y arrive toujours pas, demande à l'organisateur. Mais fais attention, tu risques de laisser des indices sur ton objectif.</p>
 </details>
 <details>
   <summary>🤬 On a deviné ma carte</summary>
   <p>Tu dois lui donner ta carte et il peut scanner ton QR code.</p>
+</details>
+<details>
+  <summary>👻 La personne n'est pas là</summary>
+  <p>Attends un peu pour être sûr.</p>
+  <p>Si elle n'est toujours pas là, l'organisateur devra te donner ça carte.</p>
+</details>
+<details>
+  <summary>💀 Je suis mort</summary>
+  <p>Evite de le dire à tout le monde pour continuer à laisser planer le doute.</p>
+  <p>Tu peux aussi aider d'autres personnes à réaliser leur objectifs.</p>
 </details>
