--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,14 @@
 <h1>Générateur du jeu Killer</h1>
 <p class="text-center"><%= render "games/dashboards_list" %></p>
 <p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
-<h2>Comment ça marche?</h2>
-<ol>
-  <li><%= link_to 'Créez un évenement', new_game_path %></li>
-  <li>Ajoutez les participants et les actions</li>
-  <li>Générez et imprimmez les cartes</li>
-</ol>
+<h2>Les règles</h2>
+<%= render 'games/rules' %>
+<h2>Comment ça marche ce site?</h2>
+<p>Cette application te simplifie la gestion d'un Killer.</p>
+<p>Il te suffit de <%= link_to 'créer un évenement', new_game_path %> en renseignant les participants et les actions.</p>
+<p>Ensuite tu pourras générer des cartes à imprimmer et découper. Sur chaques cartes, il y aura deux QR codes:</p>
+<ul>
+  <li>un donne accès à un tableau de bord en temps réel</li>
+  <li>un permet de signaler que la carte a été réalisée</li>
+</ul>
+<p>Et bien sûr, tu as accès à un tableau de bord pour gérer les absents de dernière minutes et les tricheurs.</p>
