--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New game</h1>
-
+<h1>Créer une évenement</h1>
 <%= render "form", game: @game %>
-
 <br>
-
 <div>
   <%= link_to "Back to games", games_path %>
 </div>
