--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,5 +1,5 @@
 <h1 id="title">🎉 Bien joué!</h1>
-<p>Tu t'es emparé de cette carte. Passe vite à la suite.</p>
+<p>Tu as remplis cette mission? Passe vite à la suite.</p>
 <div style="padding-top:56.250%;position:relative;"><iframe src="https://gifer.com/embed/<%= weel_done_giffer_id %>" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div>
 <h2>Où en est le jeu?</h2>
 <%= render 'games/dashboard', game: @card.game %>
