fix speling mistake

--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -19,7 +19,7 @@
     <header>🏆 Palmarès</header>
     <% if podium.size %>
       <ul>
-        <li><strong>🥇 1ère:</strong> <%= pluralize podium[0], 'victime', 'victimes' %></li>
+        <li><strong>🥇 1èr:</strong> <%= pluralize podium[0], 'victime', 'victimes' %></li>
         <% if podium[1] %>
           <li><strong>🥈 2ème:</strong> <%= pluralize podium[1], 'victime', 'victimes' %></li>
         <% end %>
