--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -44,12 +44,12 @@
 </details>
 <details>
   <summary>🤬 On a deviné ma carte</summary>
-  <p>Tu dois lui donner ta carte et il peut scanner ton QR code.</p>
+  <p>T'es niqué et tu ne pourras probablement jamais réaliser ta mission... Désolé.</p>
 </details>
 <details>
   <summary>👻 La personne n'est pas là</summary>
   <p>Attends un peu pour être sûr.</p>
-  <p>Si elle n'est toujours pas là, l'organisateur devra te donner ça carte.</p>
+  <p>Si elle n'est toujours pas là, l'organisateur te donnera ça carte.</p>
 </details>
 <details>
   <summary>💀 Je suis mort</summary>
