--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,36 +1,18 @@
 <div class="cards">
   <% @cards.each do |card| %>
-    <div class="card side-by-side">
-      <div class="card__front">
-        <p class="card__title">Killer card de <strong><%= card.player %></strong></p>
-        <div class="side-by-side">
-          <div>
-            <p class="card__action">🎯 Ta mission<br/>
-              Fais en sorte que <strong><%= card.target %></strong> effectue l'action suivante:<br/>
-              <strong><%= card.action %></strong>
-            </p>
-            <p class="card__help">Fais réaliser cette action à ta victime et remporte sa carte. Ensuite, remplis ton nouvel objectif!</p>
-          </div>
-          <div class="text-center">
-            <p class="card__help">Lien du tableau de bord</p>
-            <%= qr_code game_dashboard_url(card.game.token) %>
-          </div>
+    <div class="card">
+      <p class="card__title">Killer card de <strong><%= card.player %></strong></p>
+      <div class="side-by-side">
+        <div>
+          <p class="card__action">🎯 Ta mission<br/>
+            Fais en sorte que <strong><%= card.target %></strong> effectue l'action suivante:<br/>
+            <strong><%= card.action %></strong>
+          </p>
+          <p class="card__help">Fais réaliser cette action à ta victime et remporte sa carte. Ensuite, remplis ton nouvel objectif!</p>
         </div>
-      </div>
-      <div class="card__back">
-        <p class="card__title">✅ J'ai réalisé ma mission</p>
-        <div class="side-by-side">
-          <div>
-            <p>Tu as réalisé ta mission? Bien joué! 💪</p>
-            <p>Maintenant, scanne ce QR code et passe à la suite.</p>
-            <p class="card__warning">Ne scanne pas le QR code tant que la mission n'est pas remplie.</p>
-          </div>
-          <div>
-            <div class="qr-wrapper">
-              <p class="card__help">Lien pour remplir la mission</p>
-              <%= qr_code game_card_url(game_id: card.game_id, id: card.token) %>
-            </div>
-          </div>
+        <div class="text-center">
+          <p class="card__help">Lien de ta carte</p>
+          <%= qr_code public_card_url(card.token) %>
         </div>
       </div>
     </div>
